# goldenmate_orion_1000

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  README.md  debug_pyserial.py  main.py  pyproject.toml  pyrightconfig.json
.amazonq/cli-agents/: q_cli_default.json
.amazonq/rules/: bms_protocol.md  project-planning-and-tracking.md  python-code-standards.md  python-setup.md  python-testing.md  python.md  track_implementation.md
demo/: README.md  __init__.py  test_main_demo.py  test_main_integration_demo.py  test_transport_reliability_demo.py
docs/: implementation_status.md  orion_1000_protocol_english.md  project_plan.md  protocol_spec_english.md
orion1000_bms/: __init__.py  client.py  exceptions.py  protocol.py
planning/: project_strategy.md  project_tracking.md
src/orion1000_bms/: __init__.py  client.py  exceptions.py  logging.py
src/orion1000_bms/commands/: __init__.py  base.py  capacity_status_request.py  current_status_request.py  mos_control.py  parsing_utils.py  read_cell_voltage.py  read_current.py  read_total_voltage.py  registry.py  serial_number_request.py  voltage_request.py
src/orion1000_bms/protocol/: __init__.py  codec.py  constants.py  frame.py
src/orion1000_bms/transport/: __init__.py  base.py  tcp.py
tests/integration/: test_client_integration.py  test_golden_frames.py  test_tcp_transport.py
tests/integration/data/frames/: golden_frames.py
tests/integration/fakes/: fake_bms_server.py
tests/unit/: test_checksum.py  test_client.py  test_codec.py  test_commands.py  test_constants.py  test_exceptions.py  test_frame.py  test_logging.py  test_parsing_utils.py  test_updated_commands.py
tests/unit/transport/: test_retry.py
